--- a/random_redirect.html
+++ b/random_redirect.html
@@ -7,11 +7,11 @@
             var formA = "https://forms.office.com/Pages/ResponsePage.aspx?id=DsRSqomsY0qyz3xXD98d8noSLwAdtlVDlMhdiXGWfZ5UOTZNS05JQzlFV1NLRlFMRzI1VEVMVkVKSS4u";
             var formB = "https://forms.office.com/Pages/ResponsePage.aspx?id=DsRSqomsY0qyz3xXD98d8noSLwAdtlVDlMhdiXGWfZ5UNkM3SU5UQkZLTVhDMlFNRUs5NzlHUDhZVS4u";
 
-            var randomNumber = Math.random(); // Generates a number between 0 and 1
+            var randomNumber = Math.random();
             if (randomNumber < 0.5) {
-                window.location.href = formA; // Redirect to Form A
+                window.location.href = formA;
             } else {
-                window.location.href = formB; // Redirect to Form B
+                window.location.href = formB;
             }
         };
     </script>
